--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p>
       I'm a <strong>Web Developer</strong> specializing in frontend development.
       I enjoy building visually appealing, fast, and accessible websites using
-      modern technologies like HTML, CSS, JavaScript, and React.
+      modern technologies like HTML, CSS, JavaScript, and Python.
     </p>
 
     <p>
