Add PWA install button and icon for portfolio

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
     </div>
   </section>
 
+  <!-- Install PWA Button -->
+<button id="installBtn" class="install-btn" style="display:none;">
+  ⬇ Install Portfolio
+</button>
+
+
   <!-- Footer -->
   <footer>
     <p>© 2026 Yash Sanjay Bhosale. All rights reserved.</p>
